# SteamAchievements

./: README.md  docker-compose.yml  justfile  pyproject.toml  server.dockerfile
examples/: game_schema.json
projects/client/: Makefile  tailwind.config.js
projects/client/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
projects/client/src/app/achievement/: achievement.component.spec.ts  achievement.component.ts  achievement.service.spec.ts  achievement.service.ts
projects/client/src/app/cfg/: cfg.component.html  cfg.component.spec.ts  cfg.component.ts
projects/client/src/app/game/: game.component.ts  game.service.spec.ts  models.ts
projects/client/src/app/game/games/: games.component.html  games.component.ts
projects/client/src/app/games/: game.service.ts  games.component.ts
projects/client/src/app/games/game/: game.component.ts
projects/client/src/app/user/: models.ts  user.component.spec.ts  user.component.ts  user.service.spec.ts  user.service.ts
projects/client/src/environments/: environment.prod.ts  environment.ts
projects/server/: Makefile  orwynn_cfg.py  pyproject.toml
projects/server/src/: __main__.py  achievement.py  game.py  platform.py  user.py
projects/server/tests/: collect_test_data.py  conftest.py
projects/server/tests/data/: games.json
server/: __main__.py  models.py  platform.py  utils.py
static/: htmx.min.js
tests/data/: achievements.json
