[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload"
]

[tool.poetry.dependencies]
python = "^3.12"
bottle = "^0.13.2"
pypika = "^0.48.9"
pydantic = "^2.10.2"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
coverage = "^6.5.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.21.0"
pytest-aiohttp = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
